    <resources>
    <string name="app_name">Administración de citas: </string>
    <string name="appointment_code_hint">Código de cita</string>
    <string name="nameLbl">Nombre de paciente: </string>
    <string name="doctorLbl">Médico: </string>
    <string name="dateLbl">Fecha: </string>
    <string name="serviceLbl">Servicio: </string>
    <string name="costLbl">Costo total: </string>
    <string name="accept">Aceptar</string>
    <string name="confirm">Confirmar Cita</string>
    <string name="details_title">Detalle de la cita</string>
</resources>
