<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="75dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        tools:context=".activity.MainActivity"
        android:background="@color/colorGray"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/codeAppointmentTxt"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:hint="@string/appointment_code_hint"
                android:textColorHint="@color/colorWhite"
                android:backgroundTint="@color/colorWhite"
                android:gravity="center"
                android:inputType="number"
                android:autofillHints="@string/appointment_code_hint">

        </EditText>

        <Button
                android:id="@+id/acceptBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept">

        </Button>


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorGray"
            android:paddingTop="25dp"
            android:paddingBottom="50dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_title"
                android:textColor="@color/colorAccent"
                android:gravity="center_vertical"
                android:paddingVertical="10dp"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry">

        </TextView>

        <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorAccent" />

        <TextView
                android:id="@+id/patientTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameLbl"
                android:textColor="@color/colorWhite"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                tools:ignore="RtlSymmetry">

        </TextView>

        <TextView
                android:id="@+id/doctorTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doctorLbl"
                android:textColor="@color/colorWhite"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry">

        </TextView>

        <TextView
                android:id="@+id/dateTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dateLbl"
                android:textColor="@color/colorWhite"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry">

        </TextView>

        <TextView
                android:id="@+id/serviceTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/serviceLbl"
                android:textColor="@color/colorWhite"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry">

        </TextView>

        <TextView
                android:id="@+id/costTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/costLbl"
                android:textColor="@color/colorWhite"
                android:paddingTop="20dp"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry">

        </TextView>


    </LinearLayout>

    <Button
            android:id="@+id/confirmBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_gravity="center">

    </Button>


</LinearLayout>